--- a/conda.yaml
+++ b/conda.yaml
@@ -2,7 +2,11 @@ channels:
   - conda-forge
 
 dependencies:
-  - python=3.7.5
-  - pip=20.1
+# Define conda-forge packages here -> https://anaconda.org/search
+# When available, prefer the conda-forge packages over pip as installations are more efficient.
+
+  - python=3.9.13            # https://pyreadiness.org/3.9/ 
+  - pip=22.3                 # https://pip.pypa.io/en/stable/news/
   - pip:
-      - rpaframework==14.1.1 # https://rpaframework.org/releasenotes.html
+  # Define pip packages here -> https://pypi.org/
+      - rpaframework==19.0.0 # https://rpaframework.org/releasenotes.html
