--- a/conda.yaml
+++ b/conda.yaml
@@ -9,4 +9,5 @@ dependencies:
   - pip=22.3                 # https://pip.pypa.io/en/stable/news/
   - pip:
   # Define pip packages here -> https://pypi.org/
-      - rpaframework==19.0.0 # https://rpaframework.org/releasenotes.html
+    - rpaframework==23.0.0            # https://rpaframework.org/releasenotes.html
+    - rpaframework-assistant==2.2.2   # https://rpaframework.org/releasenotes.html
